Infrastructure/terraform/nat.tf
# ==========================================
# Elastic IP for NAT Gateway
# ==========================================

resource "aws_eip" "nat_eip" {
  domain = "vpc"

  tags = {
    Name = "cloudnotes-nat-eip"
  }
}


# ==========================================
# NAT Gateway
# ==========================================

resource "aws_nat_gateway" "cloudnotes_nat" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnet_1.id

  tags = {
    Name = "cloudnotes-nat-gateway"
  }

  depends_on = [
    aws_internet_gateway.cloudnotes_igw
  ]
}


# ==========================================
# Private Route Table - Internet Route
# ==========================================

resource "aws_route" "private_nat_route" {
  route_table_id         = aws_route_table.private_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.cloudnotes_nat.id
}
